--- a/Unit09/scss/_large.scss
+++ b/Unit09/scss/_large.scss
@@ -52,7 +52,7 @@ nav a {
   
   }
 
-  #planVisit div:nth-child(2), {
+  #planVisit div:nth-child(4), {
     margin-right: 0;
     
   }
